@@ -7,6 +7,8 @@ Version 1.7.5+svn:
    * Added recall formula ai function and ai.recall_list formula ai attribute.
    * Modified default ai recruitment to recall good units from recall list.
    * Modified default ai recruitment to consider enemy potential recruits during recruitment.
+ * Formula AI:
+   * New 'reduce()' formula function
  * Graphics:
    * New portraits for Merman Spearman, Bat, Merman Netcaster
    * Added a couple of missing frames for the Inferno Drake
